update update_data function

--- a/Goal_Program.ipynb
+++ b/Goal_Program.ipynb
@@ -55,18 +55,15 @@
     "                self.goals[gl].update_data()\n",
     "                self.goals[gl].update_pos()\n",
     "                self.goals[gl].dump_data()\n",
-    "            \n",
-    "    def srt_plot_dot(self):\n",
     "        goal_dict = {}\n",
     "        for gl in self.goals:\n",
     "            self.goals[gl].update_pos()\n",
     "            goal_dict[gl] = self.goals[gl].return_prob_of_goal()\n",
     "        today = str(dt.datetime.today())[:10]\n",
     "        self.gl_hist[today] = goal_dict\n",
-    "        sdd = sorted(goal_dict.items(), key=lambda kv: kv[1])\n",
-    "        numgoals = len(sdd)\n",
-    "        rows = round(np.sqrt(numgoals))\n",
-    "        cols = rows+1\n",
+    "            \n",
+    "    def srt_plot_dot(self, date=str(dt.datetime.today())[:10]):\n",
+    "        sdd = self.gl_hist[date]\n",
     "        plt.figure(figsize=(15,8))\n",
     "        plt.xlim([0,1])\n",
     "        plt.ylim([0,1])\n",
@@ -384,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygoals.add_goal('read a book', stdt='2023-04-01')"
+    "# mygoals.add_goal('read a book', stdt='2023-04-01')"
    ]
   },
   {
@@ -412,24 +409,6 @@
    "outputs": [],
    "source": [
     "mygoals.srt_plot_dot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2022-03-26 mygoals.srt_plot_dot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2022-03-24 mygoals.srt_plot_dot()"
    ]
   },
   {
