add last_update faint balloon to show direction

--- a/Goal_Program.ipynb
+++ b/Goal_Program.ipynb
@@ -23,6 +23,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for i, goal in enumerate(mygoals.gl_hist['2023-04-01']):\n",
+    "    print(goal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class goal_program():\n",
     "    \n",
     "    def __init__(self, name='goals'):\n",
@@ -61,9 +71,12 @@
     "            goal_dict[gl] = self.goals[gl].return_prob_of_goal()\n",
     "        today = str(dt.datetime.today())[:10]\n",
     "        self.gl_hist[today] = goal_dict\n",
+    "        self.last_update_date = self.current_update_date\n",
+    "        self.current_update_date = today\n",
     "            \n",
-    "    def srt_plot_dot(self, date=str(dt.datetime.today())[:10]):\n",
-    "        sdd = self.gl_hist[date]\n",
+    "    def srt_plot_dot(self, show_last=True):\n",
+    "        sdd = self.gl_hist[self.current_update_date]\n",
+    "        lsdd = self.gl_hist[self.last_update_date]\n",
     "        plt.figure(figsize=(15,8))\n",
     "        plt.xlim([0,1])\n",
     "        plt.ylim([0,1])\n",
@@ -71,8 +84,7 @@
     "        plt.title('My Goals', size='xx-large', loc='left')\n",
     "        exes = list(np.linspace(.1,.9,len(sdd)))\n",
     "        for i, goal in enumerate(sdd):\n",
-    "            order = i*2\n",
-    "            color = goal[1]\n",
+    "            color = float(sdd[goal])\n",
     "            if color < .2:\n",
     "                red = np.linspace(.75,1,10)[int(color/.0201)]\n",
     "                green = np.linspace(0,.5,10)[int(color/.0201)]\n",
@@ -89,23 +101,24 @@
     "                blue = np.random.rand()*.5\n",
     "                size = .95 - color*.25\n",
     "            else:\n",
-    "                red = np.random.rand()\n",
-    "                green = np.random.rand()\n",
-    "                blue = np.random.rand()\n",
-    "#                 red = np.linspace(.95,.4,10)[int((color-.4)/.0601)]\n",
-    "#                 green = np.linspace(.95,.8,10)[int((color-.4)/.0601)]\n",
-    "#                 blue = (color-.8)*4\n",
+    "                red = np.linspace(.95,.4,10)[int((color-.4)/.0601)]\n",
+    "                green = np.linspace(.95,.8,10)[int((color-.4)/.0601)]\n",
+    "                blue = (color-.8)*4\n",
     "                size = .75 - ((color-.8)*2)\n",
     "            myx = np.random.choice(exes)\n",
     "            exes.remove(myx)\n",
     "            x = myx + np.random.choice([-.02,-.01,0,.01,.02])\n",
-    "            y = .15+color*.75+np.random.rand()*.05\n",
+    "            y = .15+color*.8\n",
     "            ## plot balloon buckets\n",
+    "            if show_last==True:\n",
+    "                if goal in lsdd:\n",
+    "                    ly = .15 + float(lsdd[goal])*.8\n",
+    "                    plt.plot(x,ly, 'o', markersize=(80*size), c=(red,green,blue), alpha=.3)\n",
     "            plt.plot(x-(size*.007),y-(size*.09), '|', markersize=20*size, c='black')\n",
     "            plt.plot(x+(size*.007),y-(size*.09), '|', markersize=20*size, c='black')\n",
     "            plt.plot(x,(y-(.125*size)), 's', markersize=16*size, c=(.6,.3,.2))\n",
     "            plt.plot(x,y, 'o', markersize=(80*size), c=(red,green,blue))\n",
-    "            plt.text(x-.03, y-.003, goal[0])\n",
+    "            plt.text(x-.03, y-.003, goal)\n",
     "#             self.goals[goal].days_til_update = color*3\n",
     "        ## plot some random trees\n",
     "\n",
@@ -171,6 +184,24 @@
     "            self.goals[gl].update_pos()\n",
     "            self.goals[gl].update_data()\n",
     "            self.goals[gl].dump_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygoals.current_update_date = '2023-04-01'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mygoals.last_update_date = '2023-03-31'"
    ]
   },
   {
@@ -408,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mygoals.srt_plot_dot()"
+    "mygoals.srt_plot_dot(show_last=True)"
    ]
   },
   {
@@ -444,15 +475,6 @@
    "outputs": [],
    "source": [
     "mygoals.goals['strength'].plot_model()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mygoals.gl_hist"
    ]
   },
   {
